Fix padding of header and gap of ul elements

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 8px;
 }
 
 .logo {
@@ -20,7 +20,7 @@ ul {
   list-style-type: none;
   display: flex;
   padding-left: 0px;
-  gap: 15px;
+  gap: 8px;
 }
 
 a {
